css/rpg-ui.css
@import url('https://fonts.googleapis.com/css2?family=Kurale&display=swap');

:root {
    --main-text-light-color: #98968a;
    --border-color: #372d25;
}

#logo {
    left: 22px;
}

.hide {
    display: none;
    display: none;
}

.new-logo {
    z-index: 6;
    position: absolute;
    left: 20px;
    width: 100px;
    top: 5px;
    color: var(--main-text-light-color);
    font-family: 'Kurale', serif;
    font-weight: 800;
    font-size: 20px;
    text-align: center;
}

.new-logo::before {
    position: absolute;
    content: " ";
    width: 128%;
    height: 130%;
    top: -15%;
    background: url(../ui/buttons/controls_btn.png);
    background-size: 100% 100%;
    z-index: -1;
    left: -10%;
}


#sidebar {
    overflow: visible;
    width: 350px;
    padding: 0px 15px;
    background: none;
    box-shadow: none;
    border: none;
}

#sidebar.app.collapsed {
    padding: 0!important;
}


#sidebar.app.collapsed::before {
    width: 40px!important;
    left: -4px!important;
    height: 110%!important;
}

#sidebar::before {
    position: absolute;
    z-index: -1;
    content: " ";
    height: 100%;
    width: 100%;
    left: 0;
    background: url(../ui/frames/chat.png);
    background-size: 350px 100%;
}

#sidebar::after {
    position: absolute;
    z-index: -1;
    content: " ";
    width: 350px;
    height: 86px;
    left: 0;
    background: url(../ui/frames/header.png);
    background-size: 350px 86px;
}

#sidebar-tabs {
    box-shadow: none;
    border-bottom: none;
    padding: 0 10px;
    margin-top: 35px;
}

#sidebar-tabs > .item.active {
    color: #FFF;
    border: none;
    box-shadow: none;
}

#sidebar-tabs > .item:before {
    position: absolute;
    content: ' ';
    background: url(../ui/frames/red_line.png);
    width: 100%;
    height: 3px;
    bottom: -3px;
    left: 0;
    opacity: 0;
    transition-property: opacity;
    transition-duration: 0.3s;
}

#sidebar-tabs > .item.active:before {
    opacity: 1;
}

#chat-form {
    margin: 0 6px 25px;
}

#chat-form textarea {
    color: #837360;
    background: #ffffff14;
}

#chat-form textarea:focus {
    box-shadow: none;
}

#chat-controls {
    color: #837360;
    margin: 0 6px 10px
}

#chat-controls::before {
    position: relative;
    content: ' ';
    background: url(../ui/frames/brown_line.png);
    background-size: 350px 7px;
    left: -3px;
    width: 350px;
    height: 7px;
    bottom: 8px;
}

#chat-controls .roll-type-select {
    background: rgb(131 115 96);
}

#chat-log .message {
    position: relative;
    color: #837360;
    border: none !important;
    background: none !important;
    padding: 10px 20px 15px 20px;
    margin: 0px 0px;
}

#chat-log .message::before {
    content: " ";
    position: absolute;
    background-repeat: no-repeat;
    background: url(../ui/frames/chat-texture-light.png) !important;
    background-size: 95% 110% !important;
    width: calc(100% + 35px);
    height: calc(100% + 15%);
    left: -10px;
    top: -15%;
    z-index: -1;
}

#chat-log .message .message-header {
    color: var(--main-text-light-color) !important; /*92887f*/
    font-size: 16px;
    font-weight: 600;
}

.chat-message .message-content {
    color: var(--main-text-light-color) !important;/*8e8073*/
}

::-webkit-scrollbar-thumb {
    outline: none;
    border-radius: 0px;
    border: none;
    background: #251f1d;
}

::-webkit-scrollbar-track {
    background: #181413;
}

.dnd5e.chat-card {
    padding-bottom: 15px;
}

.dnd5e.chat-card::before {
    position: relative;
    content: ' ';
    background: url(../ui/frames/brown_line.png);
    background-size: 350px 7px;
    left: -3px;
    width: 350px;
    height: 7px;
    bottom: 8px;
}

.dnd5e.chat-card .card-header {
    border: none;
}

.dnd5e.chat-card .card-buttons button {
    border: none;
}

.dnd5e.chat-card .card-footer {
    border: none;
}

.dnd5e.chat-card .card-header h3 {
    color: var(--main-text-light-color);
}

.dnd5e.chat-card .card-footer span {
    border: none;
}

.dnd5e.chat-card .card-buttons button {
    color: var(--main-text-light-color);
}

.dnd5e.chat-card .card-buttons button {
    position: relative;
}

.dnd5e.chat-card .card-buttons button::before {
    position: absolute;
    content: " ";
    width: 100%;
    height: 130%;
    top: -15%;
    background: url(../ui/buttons/btn-dnd5e-card.png);
    background-size: 100% 100%;
    z-index: -1;
    left: 0;
}

.dnd5e.chat-card .card-buttons button:hover::before {
    background: url(../ui/buttons/btn-dnd5e-card_hover.png);
    background-size: 100% 100%;
}

.dnd5e.chat-card .card-buttons button:hover {
    box-shadow: none;
}

.dice-roll .dice-formula, .dice-roll .dice-total {
    border: none;
    box-shadow: none;
}

/* CONTROLS */

#controls {
    top: 70px;
}

body.compact-mode > ol.app.control-tools {
    top: -6px!important;
}

#controls .control-tools {
    left: 60px;
}

#controls .scene-control, #controls .control-tool {
    margin: 0 0 4px;
}

#controls .scene-control.active, #controls .control-tool.active, #controls .scene-control:hover, #controls .control-tool:hover {
    color: #d6d3c1;
}

#controls .scene-control, #controls .control-tool {
    border: none;
    box-shadow: none;
    background: none;
    color: #837360;
    padding: 5px;
}

#controls .scene-control, #controls .control-tool {
    margin: 0 0 4px;
}

#controls .scene-control i {
    position: relative;
}

#controls .scene-control > i::after, #controls li[data-control="combat-carousel"]::after {
    position: absolute;
    content: " ";
    width: 53px;
    height: 53px;
    left: -12px;
    top: -12px;
    background: url(../ui/buttons/controls_btn.png);
    background-size: 100% 100%;
    z-index: -2;
    opacity: 0.88;
}

#controls li[data-control="combat-carousel"] {
    position: relative;
}

#controls li[data-control="combat-carousel"] img {
    position: relative;
    left: 4px;
}

#controls li[data-control="combat-carousel"]::after {
    left: 0px;
    top: 0px;
}
/* ... */

